<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songtitle"/>
    <EditText
        android:id="@+id/etSongID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songtitle"/>
    <EditText
        android:id="@+id/etEditST"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SThint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singers"/>
    <EditText
        android:id="@+id/etEditSingers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/singerHint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"/>
    <EditText
        android:id="@+id/etEditYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/yearHint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stars"/>

    <RadioGroup
        android:id="@+id/radioGroupEditStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbEdit1Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star1"/>
        <RadioButton
            android:id="@+id/rbEdit2Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star2"/>
        <RadioButton
            android:id="@+id/rbEdit3Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star3"/>
        <RadioButton
            android:id="@+id/rbEdit4Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star4"/>
        <RadioButton
            android:id="@+id/rbEdit5Star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star5"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"/>
        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"/>
    </LinearLayout>
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>
</LinearLayout>